Freedom Sanbox Ant Deploy/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Customer Portal</fullName>
        <description>This is for the Customer Portal users</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Internal Support</fullName>
        <description>This is to handle internal support tickets</description>
        <isActive>true</isActive>
        <values>
            <fullName>Clarification Provided</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Needs Clarification</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Re-open</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <description>Developer Name,who will be working on respected case</description>
        <label>Assigned Developer</label>
        <picklist>
            <picklistValues>
                <fullName>Mahesh Hirugade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dipak Nikam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jina Chetia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manasi Ranade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jyoti Chouthai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setty</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AsssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AsssignedTo</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Owenr_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <inlineHelpText>This field will be added by the developer</inlineHelpText>
        <label>Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>Highly Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Developers_Comments__c</fullName>
        <inlineHelpText>Developers will add their comments in this section</inlineHelpText>
        <label>Developers Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minutes_Spent__c</fullName>
        <label>Minutes Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <description>This is to indicate module name of newly generated case.</description>
        <inlineHelpText>Module Name should be added in this section by Technology Support</inlineHelpText>
        <label>Module Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <inlineHelpText>Resolution should be added in this section by Technology Support</inlineHelpText>
        <label>Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resolved_Date__c</fullName>
        <label>Resolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Customer_Portal</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
        <sharedTo>
            <role>ACCOUNTFINANCE</role>
            <role>AsstManager</role>
            <role>AsstManager255431</role>
            <role>AsstManagerOperations</role>
            <role>AsstMgrIns</role>
            <role>BusinessPartner</role>
            <role>COO</role>
            <role>ChiefFinancialPlanningResearch</role>
            <role>ExecutiveCompliance</role>
            <role>ExecutiveMktg</role>
            <role>ExecutiveOperations</role>
            <role>ExecutiveTeam</role>
            <role>FPsGALAXYDELHI</role>
            <role>FPsGALAXYMUMBAI</role>
            <role>FPsGALAXYUJJAIN</role>
            <role>FPsMAEGANMUMBAI</role>
            <role>FounderCEO</role>
            <role>FpsAMETHYSTPUNE</role>
            <role>HeadCompliance</role>
            <role>HeadMemberEngagement</role>
            <role>HeadOperations</role>
            <role>Head_Business_Partners</role>
            <role>Head_Partner_Development</role>
            <role>HumanResource</role>
            <role>Manager_Digital_Marketing</role>
            <role>MgrFinancialPlanningAMETHYSTMUMBAI</role>
            <role>MgrFinancialPlanningGALAXYDELHI</role>
            <role>MgrFinancialPlanningGALAXYMUMBAI</role>
            <role>MgrFinancialPlanningGALAXYMUMBAI2</role>
            <role>MgrFinancialPlanningGALAXYUJJAIN</role>
            <role>MgrFinancialPlanningMAEGANMUMBAI</role>
            <role>MgrHumanCapital</role>
            <role>MgrMktg</role>
            <role>PRODUCTSPECIALISTS</role>
            <role>RESEARCH</role>
            <role>SrExecutiveMemberEngagement</role>
            <role>SrMgrFPAMETHYST</role>
            <role>SrMgrFPGALAXY</role>
            <role>SrMgrFPMAEGAN</role>
            <role>SrMgrKnowledgeHub</role>
            <role>Tech</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>notEqual</operation>
            <value>Customer Portal</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Internal</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Open_Customer_Portal_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>OWNER_NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Customer_Portal</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Open Customer Portal Cases</label>
        <sharedTo>
            <role>HeadCompliance</role>
            <role>Tech</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Internal_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Internal</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Needs Clarification,Re-open,Clarification Provided,On Hold</value>
        </filters>
        <label>Open Internal Cases</label>
        <sharedTo>
            <role>HeadCompliance</role>
            <role>Tech</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Customer_Portal</fullName>
        <active>true</active>
        <businessProcess>Internal Support</businessProcess>
        <description>This is the record type for Customer Portal Users</description>
        <label>Customer Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ffreedom_Internal</fullName>
        <active>true</active>
        <businessProcess>Internal Support</businessProcess>
        <description>FFreedom internal Issues</description>
        <label>Ffreedom Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <businessProcess>Internal Support</businessProcess>
        <description>This is to track daily support tickets raised to Technology Support</description>
        <label>Technology Support</label>
    </recordTypes>
    <validationRules>
        <fullName>Case_Close_Option</fullName>
        <active>true</active>
        <description>Case Close Option only for Case Owner</description>
        <errorConditionFormula>AND( (RecordTypeId  = &apos;012W00000004MIU&apos;), (AND((   $User.Id   &lt;&gt;  OwnerId  ),( ISPICKVAL(Status, &apos;Closed&apos;) ))) )</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Closed owned by Case owner</errorMessage>
    </validationRules>
</CustomObject>